--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <div class="row">
         <div class="eight columns content-section">
           <h4>Altovise ("Allie") Curtis | Portfolio</h4>
-          <p>I'm currently crafting an immersive portfolio experience that showcases my journey as a veteran UX researcher transitioning into data analysis and visualization. This space will feature interactive case studies, data-driven insights, and lessons learned from real-world projects. Stay tuned!
+          <p>I'm currently crafting an immersive portfolio experience that showcases my journey as a veteran <strong>UX researcher</strong> transitioning into <strong>data analysis and visualization</strong>. This space will feature interactive case studies, data-driven insights, and lessons learned from real-world projects. Stay tuned!
             <br><br>
             <em>Allie Curtis</em>
           </p>
