Add link to Github repo

--- a/index.html
+++ b/index.html
@@ -229,17 +229,13 @@
           <h4>Altovise ("Allie") Curtis | Portfolio</h4>
           <p>I'm currently crafting an immersive portfolio experience that showcases my journey as a veteran <strong>UX researcher</strong> transitioning into <strong>data analysis and visualization</strong>. This space will feature interactive case studies, data-driven insights, and lessons learned from real-world projects. Stay tuned!
             <br><br>
-            <em>Allie Curtis</em>
+            <em>* I am creating this portfolio using HTML, CSS, and (vanilla) Javascript. Visit my <a href="https://github.com/altovise/starter" target="_blank"> Github repo</a>.</em>
           </p>
           
         </div>
         <div class="four columns">
           <div class="image-section">
-            <!-- <div class="profile-image">
-              Your Photo Here
-              <small>250x250px recommended</small>
-            </div> -->
-            <img src="images/Allie-Curtis.jpeg" alt="Allie Curtis" class="profile-image">
+              <img src="images/Allie-Curtis.jpeg" alt="Allie Curtis" class="profile-image">
           </div>
         </div>
       </div>
